samples/python/tilengine.py


# sprite management -----------------------------------------------------------
_tln.TLN_ConfigSprite.argtypes = [c_int, c_void_p, c_ushort]
_tln.TLN_ConfigSprite.restype = c_bool
_tln.TLN_SetSpriteSet.argtypes = [c_int, c_void_p]
_tln.TLN_SetSpriteSet.restype = c_bool
_tln.TLN_SetSpriteFlags.argtypes = [c_int, c_ushort]
_tln.TLN_SetSpriteFlags.restype = c_bool
_tln.TLN_SetSpritePosition.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetSpritePosition.restype = c_bool
_tln.TLN_SetSpritePicture.argtypes = [c_int, c_int]
_tln.TLN_SetSpritePicture.restype = c_bool
_tln.TLN_SetSpritePalette.argtypes = [c_int, c_void_p]
_tln.TLN_SetSpritePalette.restype = c_bool
_tln.TLN_SetSpriteBlendMode.argtypes = [c_int, c_int, c_ubyte]
_tln.TLN_SetSpriteBlendMode.restype = c_bool
_tln.TLN_SetSpriteScaling.argtypes = [c_int, c_float, c_float]
_tln.TLN_SetSpriteScaling.restype = c_bool
_tln.TLN_ResetSpriteScaling.argtypes = [c_int]
_tln.TLN_ResetSpriteScaling.restype = c_bool
_tln.TLN_GetSpritePicture.argtypes = [c_int]
_tln.TLN_GetSpritePicture.restype = c_int
_tln.TLN_GetAvailableSprite.restype = c_int
_tln.TLN_EnableSpriteCollision.argtypes = [c_int, c_bool]
_tln.TLN_EnableSpriteCollision.restype = c_bool
_tln.TLN_GetSpriteCollision.argtypes = [c_int]
_tln.TLN_GetSpriteCollision.restype = c_bool
_tln.TLN_DisableSprite.argtypes = [c_int]
_tln.TLN_DisableSprite.restype = c_bool
_tln.TLN_GetSpritePalette.argtypes = [c_int]
_tln.TLN_GetSpritePalette.restype = c_void_p


class Sprite(object):
	"""
	The Sprite object manages each moving character onscreen
	"""
	def __init__(self, index):
		self._as_parameter_ = index

	def setup(self, spriteset, flags=0):
		"""
		Enables a sprite by setting its Spriteset and optional flags
		:param spriteset: Spriteset object with the graphic data of the sprites
		:param flags: Optional combination of defined class Flag::xxx values, 0 by default
		"""
		ok = _tln.TLN_ConfigSprite(self, spriteset, flags)
		_raise_exception(ok)

	def set_spriteset(self, spriteset):
		"""
		Enables a sprite by setting its Spriteset 
		:param spriteset: Spriteset object with the graphic data of the sprites 
		"""
		ok = _tln.TLN_SetSpriteSet(self, spriteset)
		_raise_exception(ok)

	def set_flags(self, flags):
		"""
		Sets modification flags
		:param flags: Combination of defined class Flag::xxx values
		"""
		ok = _tln.TLN_SetSpriteFlags(self, flags)
		_raise_exception(ok)

	def set_position(self, x, y):
		"""
		Sets the sprite position in screen coordinates
		:param x: Horizontal position
		:param y: Vertical position
		"""
		ok = _tln.TLN_SetSpritePosition(self, x, y)
		_raise_exception(ok)

	def set_picture(self, picture):
		"""
		Sets the actual graphic contained in the Spriteset to the sprite
		:param picture: can be an integer with the index inside the Spriteset, or a string with its name 
		"""
		ok = False
		param_type = type(picture)
		if param_type is int:
			ok = _tln.TLN_SetSpritePicture(self, picture)
		elif param_type is str:
			entry = _tln.TLN_FindSpritesetSprite(picture)
			if entry is not -1:
				ok = _tln.TLN_SetSpritePicture(self, entry)
			else:
				return
		else:
			return
		_raise_exception(ok)

	def set_palette(self, palette):
		"""
		Assigns a Palette object to the sprite. By default it is assigned wit the Spriteset's own palette
		:param palette: Palette object to set
		"""
		ok = _tln.TLN_SetSpritePalette(self, palette)
		_raise_exception(ok)

	def set_blend_mode(self, mode):
		"""
		Enables blending mode with background objects
		:param mode: One of the class Blend::xxx defined values 
		"""
		ok = _tln.TLN_SetSpriteBlendMode(self, mode)
		_raise_exception(ok)

	def set_scaling(self, sx, sy):
		"""
		Enables sprite scaling
		:param sx: floating-point value with horizontal scaling factor
		:param sy: floating-point value with vertical scaling factor
		"""
		ok = _tln.TLN_SetSpriteScaling(self, sx, sy)
		_raise_exception(ok)

	def reset_mode(self):
		"""
		Disables scaling and returns to default render mode.
		"""
		ok = _tln.TLN_ResetSpriteScaling(self)
		_raise_exception(ok)

	def get_picture(self):
		"""
		Returns the index of the assigned picture from the Spriteset
		:return: the graphic index 
		"""
		return _tln.TLN_GetSpritePicture(self)

	def enable_collision(self, mode):
		"""
		Enables pixel-accurate sprite collision detection with other sprites
		:param mode: True for enabling or False for disabling
		"""
		ok = _tln.TLN_EnableSpriteCollision(self, mode)
		_raise_exception(ok)

	def check_collision(self):
		"""
		Gets the collision status of the sprite. Requires ::enable_collision(True)
		:return: True if collision with another sprite detected, or False if not
		"""
		return _tln.TLN_GetSpriteCollision(self)

	def disable(self):
		"""
		Disables the sprite so it is not drawn
		"""
		ok = _tln.TLN_DisableSprite(self)
		_raise_exception(ok)

	def get_palette(self):
		"""
		Gets the sprite active palette
		:return: Palette object of the Sprite
		"""
		handle = _tln.TLN_GetSpritePalette(self)
		if handle is not None:
			return Palette(handle)
		else:
			_raise_exception()


# animation engine ------------------------------------------------------------
_tln.TLN_SetPaletteAnimation.argtypes = [c_int, c_void_p, c_void_p, c_bool]
_tln.TLN_SetPaletteAnimation.restype = c_bool
_tln.TLN_SetPaletteAnimationSource.argtypes = [c_int, c_void_p]
_tln.TLN_SetPaletteAnimationSource = c_bool
_tln.TLN_SetTilesetAnimation.argtypes = [c_int, c_int, c_void_p]
_tln.TLN_SetTilesetAnimation.restype = c_bool
_tln.TLN_SetTilemapAnimation.argtypes = [c_int, c_int, c_void_p]
_tln.TLN_SetTilemapAnimation.restype = c_bool
_tln.TLN_SetSpriteAnimation.argtypes = [c_int, c_int, c_void_p, c_int]
_tln.TLN_SetSpriteAnimation.restype = c_bool
_tln.TLN_GetAnimationState.argtypes = [c_int]
_tln.TLN_GetAnimationState.restype = c_bool
_tln.TLN_SetAnimationDelay.argtypes = [c_int, c_int]
_tln.TLN_SetAnimationDelay.restype = c_bool
_tln.TLN_GetAvailableAnimation.restype = c_int
_tln.TLN_DisableAnimation.argtypes = [c_int]
_tln.TLN_DisableAnimation.restype = c_bool


class Animation(object):
	"""
	The Animation object manages each animation for the sequencer engine
	"""
	def __init__(self, index):
		self._as_parameter_ = index

	def set_palette_animation(self, palette, sequence, blend):
		"""
		Starts a color cycle animation for Palette object
		:param palette: Palette object to animate
		:param sequence: Sequence object to play on the palette
		:param blend: True for smooth frame interpolation, False for classic coarse mode
		"""
		ok = _tln.TLN_SetPaletteAnimation(self, palette, sequence, blend)
		_raise_exception(ok)

	def set_palette_animation_source(self, palette):
		"""
		Sets the source palette of a color cycle animation already in motion. 
		Useful for combining color cycling and palette interpolation at the same time
		:param palette: Palette object to assign 
		"""
		ok = _tln.TLN_SetPaletteAnimationSource(self, palette)
		_raise_exception(ok)

	def set_tileset_animation(self, layer, sequence):
		"""
		Starts a Tileset animation
		:param layer: Index of layer to animate (0 -> num_layers - 1)
		:param sequence: Sequence object to play on the layer
		"""
		ok = _tln.TLN_SetTilesetAnimation(self, layer, sequence)
		_raise_exception(ok)

	def set_sprite_animation(self, sprite, sequence, loop):
		"""
		Starts a Sprite animation
		:param sprite: Index of sprite to animate (0 -> num_sprites - 1) 
		:param sequence: Sequence object to play on the sprite 
		:param loop: number of times to repeat, 0=infinite
		"""
		ok = _tln.TLN_SetSpriteAnimation(self, sprite, sequence, loop)
		_raise_exception(ok)

	def get_state(self):
		"""
		Gets the state of the animation
		:return: True if still running, False if it has finished
		"""
		return _tln.TLN_GetAnimationState(self)

	def set_delay(self, delay):
		"""
		Sets the playback speed of a given animation
		:param delay: default frame delay to assign
		"""
		ok = _tln.TLN_SetAnimationDelay(self, delay)
		_raise_exception(ok)

	def disable(self):
		"""
		Disables the animation so it doesn't run
		"""
		ok = _tln.TLN_DisableAnimation(self)
		_raise_exception(ok)
